<resources>
    <string name="app_name">bibit</string>
    <string name="masuk">Masuk</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="masuk_dengan_facebook">Masuk dengan Facebook</string>
    <string name="atau">Atau</string>
    <string name="username_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="login">Login</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_sekarang">Daftar sekarang</string>
    <string name="all_watchlist">All Watchlist</string>
    <string name="add_symbol">Add Symbol</string>
    <string name="no_data">empty state</string>
    <string name="search_by_title">Search by title</string>
    <string name="search_error">there is no such title</string>
    <string name="data_error">error state</string>
    <string name="news_details_preview">this is the news title some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="news_title_preview">this is the news title</string>
    <string name="stock_bit">StockBit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>